Fix .editor_toolbar overflow in new topic page

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,6 +1,6 @@
 #pages {
-  .tools { 
-    text-align:right; margin-bottom:10px; 
+  .tools {
+    text-align:right; margin-bottom:10px;
     a {
       margin-left:10px;
     }
@@ -33,6 +33,3 @@
   padding:4px;
   overflow: scroll;
 }
-
-.editor_toolbar{width:680px;} 
-
